--- a/Project_2/index.html
+++ b/Project_2/index.html
@@ -120,19 +120,50 @@
                         <!-- Project 1 -->
 
                         <div class="project_1">
-                            <div class="project_1_image">
+                            <div class="project_image">
                                 <img src="./assets/images/trade_center.jpg" alt="Trade Center">
                             </div>
-                            <div class="project_1_details"></div>
+                            <div class="project_details">
+                                <h3>One World</h3>
+                                <h2>Trade Center</h2>
+                                <p>Increasing prosperity in our lives can be accomplished by having the right frame of
+                                    mind. The truth is, our thoughts are
+                                    very powerful.</p>
+
+                                <button>More Details</button>
+
+                                <div class="coordinates">
+
+                                    <a href="https://maps.app.goo.gl/TH1LXmGa2NNSU6fc8" target="_blank">
+                                        <i class="fa-solid fa-location-dot"></i>New York City,
+                                        United States - 1776 feet</a>
+                                </div>
+
+                            </div>
                         </div>
 
                         <!-- Project 2 -->
 
                         <div class="project_2">
-                            <div class="project_2_image">
+                            <div class="project_details">
+                                <h3>International</h3>
+                                <h2>Commerce Centre</h2>
+                                <p>Successful businesses have many things in common, today we’ll look at the big ‘R’ of
+                                    recognition and how a digital
+                                    advertising network may help.</p>
+
+                                <button>More Details</button>
+
+                                <div class="coordinates">
+
+                                    <a href="https://maps.app.goo.gl/riqszKRDMiF6hzG89" target="_blank">
+                                        <i class="fa-solid fa-location-dot"></i>Hong Kong - 1588 feet</a>
+                                </div>
+                            </div>
+                            <div class="project_image">
                                 <img src="./assets/images/commerce_center.jpg" alt="Commerce Center">
                             </div>
-                            <div class="project_2_details"></div>
+
                         </div>
                     </div>
                 </div>
