changed the navbar to be in fixed position

--- a/Project_2/index.html
+++ b/Project_2/index.html
@@ -45,33 +45,38 @@
 
         <header id="about_us">
             <div class="header_container">
-                <a href="#" class="header_logo">
-                    <img src="./assets/images/main_logo.svg" alt="Montecito logo">
-                </a>
 
-                <!-- Navigation Menus -->
+                <!-- Navigational Items -->
 
-                <nav class="header_nav">
-                    <ul class="header_menu">
-                        <li><a href="#about_us">About us
-                            </a></li>
-                        <li><a href="#projects">Projects
-                            </a></li>
-                        <li><a href="#">News
-                            </a></li>
-                        <li><a href="#">Contact
-                            </a></li>
-                    </ul>
-                </nav>
+                <div class="title_bar">
+                    <a href="#" class="header_logo">
+                        <img src="./assets/images/main_logo.svg" alt="Montecito logo">
+                    </a>
 
-                <!-- Social Icons -->
+                    <!-- Navigation Menus -->
 
-                <div class="header_icons">
-                    <a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2F" target="_blank"><i
-                            class="fa-brands fa-facebook-f social_icons"></i></a>
-                    <a href="https://x.com/" target="_blank"><i class="fa-brands fa-twitter social_icons"></i></a>
-                    <a href="https://www.instagram.com/" target="_blank"><i
-                            class="fa-brands fa-instagram social_icons"></i></a>
+                    <nav class="header_nav">
+                        <ul class="header_menu">
+                            <li><a href="#about_us">About us
+                                </a></li>
+                            <li><a href="#projects">Projects
+                                </a></li>
+                            <li><a href="#news">News
+                                </a></li>
+                            <li><a href="#">Contact
+                                </a></li>
+                        </ul>
+                    </nav>
+
+                    <!-- Social Icons -->
+
+                    <div class="header_icons">
+                        <a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2F"
+                            target="_blank"><i class="fa-brands fa-facebook-f social_icons"></i></a>
+                        <a href="https://x.com/" target="_blank"><i class="fa-brands fa-twitter social_icons"></i></a>
+                        <a href="https://www.instagram.com/" target="_blank"><i
+                                class="fa-brands fa-instagram social_icons"></i></a>
+                    </div>
                 </div>
             </div>
 
@@ -100,7 +105,7 @@
                 </div>
             </div>
             <div class="pointer_down">
-                <a href="#"><i class="fa-solid fa-chevron-down"></i></a>
+                <a href="#project_1"><i class="fa-solid fa-chevron-down"></i></a>
             </div>
         </header>
         <main>
@@ -119,7 +124,7 @@
 
                         <!-- Project 1 -->
 
-                        <div class="project_1">
+                        <div class="project_1" id="project_1">
                             <div class="project_image">
                                 <img src="./assets/images/trade_center.jpg" alt="Trade Center">
                             </div>
@@ -168,6 +173,14 @@
                     </div>
                 </div>
 
+            </section>
+
+            <!-- News Section -->
+
+            <section id="news">
+                <div class="news_section">
+
+                </div>
             </section>
         </main>
         <footer></footer>
