margin issues news section

--- a/Project_2/index.html
+++ b/Project_2/index.html
@@ -179,6 +179,12 @@
 
             <section id="news">
                 <div class="news_section">
+                    <div class="news_section_content">
+                        <div class="news_title">
+                            <hr>
+                            <h2>Latest News</h2>
+                        </div>
+                    </div>
 
                 </div>
             </section>
