changed the contents approach with js

--- a/Project_2/index.html
+++ b/Project_2/index.html
@@ -29,6 +29,9 @@
     <!-- Slick Carousel CSS and JS -->
 
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <link rel="stylesheet" type="text/css"
+        href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
+
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
     <!-- Custom Style Sheet -->
@@ -186,9 +189,17 @@
                         </div>
                     </div>
 
+                    <!-- Carousel Sliders -->
+
+                    <div class="carousel">
+                        <div class="article">
+                            <!-- The contents of this div will be generated through JS -->
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>
+
         <footer></footer>
 
     </div>
