--- a/Project_2/index.html
+++ b/Project_2/index.html
@@ -45,6 +45,12 @@
     <script src="./assets/light_gallery/lg-fullscreen.min.js"></script>
     <script src="./assets/light_gallery/lg-thumbnail.min.js"></script>
 
+    <!-- Maps -->
+
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+        integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+
+
     <!-- Custom Style Sheet -->
 
     <link rel="stylesheet" href="./assets/styles/main.css">
@@ -77,7 +83,7 @@
                                 </a></li>
                             <li><a href="#news">News
                                 </a></li>
-                            <li><a href="#">Contact
+                            <li><a href="#contact_us">Contact
                                 </a></li>
                         </ul>
                     </nav>
@@ -122,7 +128,9 @@
                 <a href="#project_1"><i class="fa-solid fa-chevron-down"></i></a>
             </div>
         </header>
+
         <main>
+
             <!-- What we do section -->
 
             <section id="projects">
@@ -248,13 +256,96 @@
                     </div>
                 </div>
             </section>
+
+            <!-- Maps Section -->
+
+            <section id="maps">
+                <div class="maps_section">
+                    <div id="map"></div>
+                </div>
+            </section>
+
+            <!-- Contact Section -->
+
+            <section id="contact_us">
+
+                <div class="form">
+
+                    <div class=" contact_header">
+                        <h2>Get in touch</h2>
+                    </div>
+
+                    <div class="contact_details">
+                        <div class="contact_details_info">
+
+                            <div class="contact_details_info_details">
+                                <i class="fa-solid fa-location-dot"></i>
+                                <p>91 Nolan Extension Suite 670</p>
+                            </div>
+
+                            <div class="contact_details_info_details">
+                                <i class="fa-solid fa-phone"></i>
+                                <a href="tel:++0013568682454">+001 356-868-2454</a>
+                            </div>
+
+                            <div class="contact_details_info_details">
+                                <i class="fa-solid fa-inbox"></i>
+                                <a href="mailto:montichello@service.com">montichello@service.com</a>
+                            </div>
+
+                            <div class="contact_details_info_details">
+                                <i class="fa-regular fa-clock"></i>
+                                <p>From 07:05AM to 19:30PM</p>
+                            </div>
+                        </div>
+
+
+                        <form action="https://jkorpela.fi/cgi-bin/echo.cgi">
+                            <div class="contact_information">
+                                <div class="contact_information_details">
+                                    <label for="name">
+                                        <input type="text" name="name" id="name" placeholder="Mollie Medina">
+                                    </label>
+                                    <label for="email">
+                                        <input type="email" name="email" id="email" placeholder="Email">
+                                    </label>
+                                </div>
+                                <div class="submit_info">
+                                    <button type="submit" id="submit_button">Submit</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+
+                </div>
+            </section>
         </main>
 
-        <footer></footer>
+        <footer>
+            <div class="footer_container">
+                <div class="credit_container">
+                    <a href="#" class="footer_logo">
+                        <img src="./assets/images/main_logo.svg" alt="Montecito logo">
+                    </a>
+
+                    <p>Copyrights © 2020 Montichello</p>
+                </div>
+                <div class="social_icons_footer">
+                    <a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2F" target="_blank"><i
+                            class="fa-brands fa-facebook-f social_icons"></i></a>
+                    <a href="https://x.com/" target="_blank"><i class="fa-brands fa-twitter social_icons"></i></a>
+                    <a href="https://www.instagram.com/" target="_blank"><i
+                            class="fa-brands fa-instagram social_icons"></i></a>
+                </div>
+            </div>
+        </footer>
 
     </div>
 
 
+    <!-- Maps -->
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+        integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
 
     <!-- Main JavaScript Code -->
 
