media_queries header_section

--- a/Project_2/index.html
+++ b/Project_2/index.html
@@ -76,6 +76,7 @@
                     <!-- Navigation Menus -->
 
                     <nav class="header_nav">
+                        <button class="close-button">&times;</button>
                         <ul class="header_menu">
                             <li><a href="#about_us">About us
                                 </a></li>
@@ -87,6 +88,12 @@
                                 </a></li>
                         </ul>
                     </nav>
+
+                    <div class="hamburger-menu" id="hamburger">
+                        <div class="bar"></div>
+                        <div class="bar"></div>
+                        <div class="bar"></div>
+                    </div>
 
                     <!-- Social Icons -->
 
